{
  "version": 4,
  "terraform_version": "0.13.3",
  "serial": 22,
  "lineage": "1dff9520-feb9-7354-73f2-15705ccf28d8",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-065f97dde73b77860",
            "id": "rtb-065f97dde73b77860",
            "owner_id": "420198462455",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-09f1eac10275c645b",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "AwsTesting"
            },
            "vpc_id": "vpc-093efd1c0b8b0cd8c"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420198462455:internet-gateway/igw-09f1eac10275c645b",
            "id": "igw-09f1eac10275c645b",
            "owner_id": "420198462455",
            "tags": {
              "Name": "AwsTesting"
            },
            "vpc_id": "vpc-093efd1c0b8b0cd8c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "todo_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:420198462455:targetgroup/tf-example-lb-tg/1f3eeec670b3e7d1",
            "arn_suffix": "targetgroup/tf-example-lb-tg/1f3eeec670b3e7d1",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:420198462455:targetgroup/tf-example-lb-tg/1f3eeec670b3e7d1",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-093efd1c0b8b0cd8c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_http_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420198462455:security-group/sg-0cd73c80ac12dc228",
            "description": "Allow SSh and http inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cd73c80ac12dc228",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20200922064032624200000001",
            "name_prefix": null,
            "owner_id": "420198462455",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_http_ssh"
            },
            "timeouts": null,
            "vpc_id": "vpc-093efd1c0b8b0cd8c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_az1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420198462455:subnet/subnet-04c1270e1ce413e46",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/22",
            "id": "subnet-04c1270e1ce413e46",
            "map_public_ip_on_launch": true,
            "owner_id": "420198462455",
            "tags": {
              "Name": "Public AZ1"
            },
            "vpc_id": "vpc-093efd1c0b8b0cd8c"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:420198462455:vpc/vpc-093efd1c0b8b0cd8c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e7f229c16075168c",
            "default_route_table_id": "rtb-065f97dde73b77860",
            "default_security_group_id": "sg-05b91b9a9b400f12c",
            "dhcp_options_id": "dopt-541b7f2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-093efd1c0b8b0cd8c",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-065f97dde73b77860",
            "owner_id": "420198462455",
            "tags": {
              "Name": "AwsTesting"
            }
          }
        }
      ]
    }
  ]
}